redissyncer-deployment-withweb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redissyncer
  name: redissyncer-server-withweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redissyncer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redissyncer
    spec:
      containers:
      - image: jiashiwen/redissyncer:latest
        name: redissyncer-server          
        resources:
          limits:
            memory: "4294967296"
        volumeMounts:
        - name: data
          mountPath: "/redissyncer"      
        ports:
        - containerPort: 8080
      - image: jiashiwen/redissyncer-dashboard:v1.0
        name: redissyncer-dashboard
        ports:
        - containerPort: 3000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redissyncer-pv-claim
