redissyncer-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redissyncer
    # io.kompose.service: redissyncer-server
  name: redissyncer-service
  # namespace: default
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    # name: redissyncer-server
    app: redissyncer
