traefik-ingress-serice-nodeport.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  # namespace: kube-system
spec:
  selector:
    app: traefik
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 8000
      name: web
    - protocol: TCP
      port: 9000
      name: dashboard
  type: NodePort
