httpbin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: httpbin.com
    http:
      paths:
      - path: /
        backend:
          serviceName: httpbin
          servicePort: 80
